--- a/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
@@ -20,7 +20,7 @@
 				<div class="about-wrap">
 					<div class="aobut-top">
 						<div class="mgz-link">
-							<ul class="mgz-ul2">
+							<ul class="mgz-ul">
 								<li class="active"><a href="/serviceIntro">서비스 소개</a></li>
 								<!-- /notice -->
 								<li><a href="/notice">공지사항</a></li>
