--- a/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
@@ -59,7 +59,7 @@
 			</div>
 			
 			<!-- 상세내용 -->
-			<div class="modal-body pd60 h850-o" id="lp_mgz9Dtl_cntnt"></div>
+			<div class="modal-body pd60 h850-o" id="editor"></div>
 			
 		</div>
 	</div>
@@ -298,22 +298,22 @@
                 	var mgzDtl = null;
                 	console.log(data);
                 	if(data.result != null){
-                    	$("#lp_mgz9Dtl_cntnt").empty();
-                    	$("#lp_mgz9Dtl_cntnt").append(data.result.mgzContent).trigger("create");
+                    	$("#editor").empty();
+                    	$("#editor").append(data.result.mgzContent).trigger("create");
                     	
                     	var appDevice =	$("#appDevice").val();
                  		
                  		if(appDevice == "MOBILE") {
                       	
-                      		$("#lp_mgz9Dtl_cntnt > div").css('font-size', '11px');
-             				$("#lp_mgz9Dtl_cntnt > div").css('padding-left', '0px');
-             			    $("#lp_mgz9Dtl_cntnt > div").css('padding-right', '0px');
+                      		$("#editor > div").css('font-size', '11px');
+             				$("#editor > div").css('padding-left', '0px');
+             			    $("#editor > div").css('padding-right', '0px');
              			    
                  		}
                     	
                 	}else{
                 		modalAlertShow("검색 결과가 없습니다."); 
-                		$("#lp_mgz9Dtl_cntnt").empty();
+                		$("#editor").empty();
                 	}
                 },           
                 error: function(error) {
