--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -51,6 +51,7 @@
     
 	<!-- CK에디터 -->
 	<script src="https://cdn.ckeditor.com/ckeditor5/29.1.0/classic/ckeditor.js"></script>
+	<link rel="stylesheet" href="resources/css/content-styles.css" type="text/css">
     
     <style type="text/css">
 		.modal-open {
