인덱스 > 인사이트 수정 mgz9 수정

--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -502,7 +502,7 @@
 
 	        		   insightsHtml +='<div class="swiper-slide">';
 	        		   insightsHtml +='<div>';
-	        		   insightsHtml += '	<a href="" data-toggle="modal" data-target="#lp_mgz9Dtl" onclick="selectMgz9Dtl('+ mainInsights[i].mgzSq +');">';
+	        		   insightsHtml += '	<a href="/insights">';
 	        		   insightsHtml += '<div class="cns-box">';
 	        		   insightsHtml +='<img src="'+mainInsights[i].mgzMainImgUrl+'" class="hd-img" style="height:300px; "/>';
 	 				   insightsHtml += '<div class="cns-sb">';
