--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
@@ -137,7 +137,7 @@ function scrapList(){
 					html += '<li>'+ dealList[i].dealRemainingHour +'<span>hrs</span></li>';
 					html += '<li>'+ dealList[i].dealRemainingMin +'<span>min</span></li>';
 					html += '<li>'+ dealList[i].dealRemainingSec +'<span>sec</span></li></ul>';
-					html += '<h4>시작가 : '+ dealList[i].dealStrtPrc +'</h4>';
+					html += '<h4>시작가 '+ dealList[i].dealStrtPrc +' KRW</h4>';
 					
 					html += '</div>';
 					
@@ -163,10 +163,10 @@ function scrapList(){
 					html += '<p>'+ dealList[i].workSizeDepth +'x'+ dealList[i].workSizeWidth +'</p>';
 					
 					if(dealList[i].dealTypCd == "A"){
-						if(dealList[i].maxBidPrc != null) {
-	 					html += '<h4>입찰가 '+ dealList[i].maxBidPrc +'</h4>';
+						if(dealList[i].maxBidPrc != null && dealList[i].maxBidPrc != "") {
+	 					html += '<h4>입찰가 '+ dealList[i].maxBidPrc +' KRW</h4>';
 						} else {
-							html += '<h4>입찰가 30,000</h4>';
+							html += '<h4>입찰가 0 KRW</h4>';
 						}
 	 				html += '<p class="ts-2">';
 	 				html += ''+ dealList[i].dealStrtDate +' – '+ dealList[i].dealEndngDate +'<br/>';
@@ -226,7 +226,7 @@ function scrapList(){
 					html += '<p class="ts-1">'+ dealList[i].workNm +' ('+ dealList[i].workProdcYear +')</p>';
 					html += '<p>'+ dealList[i].workMatrl +'</p>';
 					html += '<p>'+ dealList[i].workSizeDepth +'x'+ dealList[i].workSizeWidth +'</p>';
-					html += '<h4>판매가 '+ dealList[i].dealFinalPrc +'</h4>';
+					html += '<h4>판매가 '+ formatComma(dealList[i].dealFinalPrc) +' KRW</h4>';
 					html += '</div>'
 					
 					html += '</div>';
