--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -116,19 +116,24 @@ function myWorkList(){
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				
 				html += '<div class="item-ho">';
+				html += '<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
+ 				html += '<p> 응찰수 : '+ result[i].bidCnt +'</p>';
+ 				html += '<ul><li>'+ result[i].dealRemainingDay +'<span>day</span></li>';
+ 				html += '<li>'+ result[i].dealRemainingHour +'<span>hrs</span></li>';
+ 				html += '<li>'+ result[i].dealRemainingMin +'<span>min</span></li>';
+ 				html += '<li>'+ result[i].dealRemainingSec +'<span>sec</span></li></ul>';
+ 				html += '<h4>시작가 '+ result[i].dealStrtPrc +' KRW</h4>';
 				
-				html += '			<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
-				if(result[i].maxBidPrc == null) {
-					html += '			<h4>입찰가 '+ formatComma(result[i].dealStrtPrc) +'</h4>';
-				} else {
-					html += '			<h4>입찰가 '+ formatComma(result[i].maxBidPrc) +'</h4>';	
-				}
-				
-				html += '			<p class="ts-2">';
+				/* html += '			<p class="ts-2">';
 				html += '			'+ result[i].dealStrtDate +' – '+ result[i].dealEndngDate +'<br/>';
 				html += '			응찰수 : '+ result[i].bidCnt +'<br/>';
 				html += '			'+ result[i].dealRemainingDay +'일 '+ result[i].dealRemainingHour +'시 '+ result[i].dealRemainingMin +'분 '+ result[i].dealRemainingSec +'초';
-				html += '			</p>';
+				html += '			</p>'; 
+				if(result[i].maxBidPrc == null) {
+					html += '			<h4>입찰가 : '+ formatComma(result[i].dealStrtPrc) +'</h4>';
+				} else {
+					html += '			<h4>입찰가 : '+ formatComma(result[i].maxBidPrc) +'</h4>';	
+				} */
 				
 				html += '</div>';
 				
@@ -154,10 +159,10 @@ function myWorkList(){
 				html += '<p>'+ result[i].workSizeDepth +'x'+ result[i].workSizeWidth +'</p>';
 				
 				if(result[i].dealTypCd == "A"){
-					if(result[i].maxBidPrc != null) {
- 					html += '<h4>입찰가 '+ formatComma(result[i].maxBidPrc) +'</h4>';
+					if(result[i].maxBidPrc != null && result[i].maxBidPrc != "") {
+ 					html += '<h4>입찰가 '+ formatComma(result[i].maxBidPrc) +' KRW</h4>';
 					} else {
-						html += '<h4>입찰가 30,000</h4>';
+						html += '<h4>입찰가 0 KRW</h4>';
 					}
  				html += '			<p class="ts-2">';
  				html += '			'+ result[i].dealStrtDate +' – '+ result[i].dealEndngDate +'<br/>';
@@ -217,7 +222,7 @@ function myWorkList(){
 				html += '<p class="ts-1">'+ result[i].workNm +' ('+ result[i].workProdcYear +')</p>';
 				html += '<p>'+ result[i].workMatrl +'</p>';
 				html += '<p>'+ result[i].workSizeDepth +'x'+ result[i].workSizeWidth +'</p>';
-				html += '<h4>판매가 '+ formatComma(result[i].dealStrtPrc) +'</h4>';
+				html += '<h4>판매가 '+ formatComma(result[i].dealStrtPrc) +' KRW</h4>';
 				html += '</div>'
 				
 				html += '</div>';
