--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -1251,13 +1251,14 @@ function ibx_search_onkeyup(e){
      
 $(document).on("click",".work",function(){
 	var workSq= $(this).attr("sq");
-	pageGoPost({
+	fnModalAlert();
+	/* pageGoPost({
 		url:"/bidding",
 		target:"_self",
 		vals:[
 			["workSq", workSq]
 		]
-	});
+	}); */
 });
 
 $(document).on("click",".artst",function(){
@@ -1272,7 +1273,8 @@ $(document).on("click",".artst",function(){
 });
 
 $(document).on("click",".workMore",function(){
-	if($("#ibx_search").val() == null || $("#ibx_search").val() == ""){
+	fnModalAlert();
+	/* if($("#ibx_search").val() == null || $("#ibx_search").val() == ""){
 		modalAlertShow("검색 키워드를 입력해주세요.", "ibx_search");
 	}else{
 		modalConfirm("알림", "작품 검색 결과 페이지로 이동하겠습니까?", function(confrim){
@@ -1286,7 +1288,7 @@ $(document).on("click",".workMore",function(){
 				});
 			}
 		});
-	}
+	} */
 });
 
 $(document).on("click",".artistMore",function(){
