--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -178,7 +178,7 @@ $(function() {
 					html += '<div  >';
 					html += '<div class="item-div-img active-on" onclick="workDetail('+ result[i].workSq +')">';
 					//작품 이미지
-					html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" width="20%;" >';
+					html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;" >';
 					
 					html += '<div class="item-ho">';
 					
